--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=utils.shortenurl
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 app.shorten-domain=localhost:8080
+app.machine-id=1
 spring.threads.virtual.enabled=true
