--- a/compose.yaml
+++ b/compose.yaml
@@ -7,8 +7,12 @@ services:
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
     ports:
-      - '3306'
+      - '3306:3306'
+    volumes:
+      - 'my-app-data:/var/lib/mysql'
   redis:
     image: 'redis:latest'
     ports:
-      - '6379'
+      - '6379:6379'
+volumes:
+  my-app-data:
