--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'
 
-	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+//	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
