--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,24 @@ spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.datasource.hikari.maximum-pool-size=90
+spring.datasource.hikari.minimum-idle=30
+# 20 seconds
+spring.datasource.hikari.connection-timeout=20000
+# 10 minutes
+spring.datasource.hikari.idle-timeout=60000
+# 30 minutes, should be less than MySQL server's timeout
+spring.datasource.hikari.max-lifetime=1800000
+# Use with @Transactional methods for optimal performance
+spring.datasource.hikari.auto-commit=false
+
 
 # redis config
 spring.data.redis.host=localhost
 spring.data.redis.port=6479
+
+# Actuator & Metrics
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+management.metrics.tags.application=${spring.application.name}
