--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 spring.datasource.hikari.maximum-pool-size=90
 spring.datasource.hikari.minimum-idle=30
 # 20 seconds
