--- a/compose.yaml
+++ b/compose.yaml
@@ -56,22 +56,28 @@ services:
       - shortenurl-network
 
   mysql-exporter:
-    image: prom/mysqld-exporter:v0.15.1
+    image: prom/mysqld-exporter:latest
     container_name: shortenurl-mysql-exporter
-    environment:
-      - DATA_SOURCE_NAME=root:verysecret@tcp(mysql:3306)/
+    ports:
+      - '9104:9104'
     command:
-      - '--collect.info_schema.tables'
-      - '--collect.info_schema.innodb_metrics'
-      - '--collect.global_status'
-      - '--collect.global_variables'
-      - '--collect.slave_status'
-      - '--collect.info_schema.processlist'
+      - "--config.my-cnf=/etc/mysql_exporter/.my.cnf"
+    volumes:
+      - ./mysql-exporter/.my.cnf:/etc/mysql_exporter/.my.cnf:ro
+#    environment:
+#      - DATA_SOURCE_NAME=root:verysecret@(mysql:3306)/
     depends_on:
       mysql:
         condition: service_healthy
     networks:
       - shortenurl-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9104/metrics"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
   redis-exporter:
     image: oliver006/redis_exporter:latest
