--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,18 @@ app.machine-id=1
 spring.threads.virtual.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=UTC&cachePrepStmts=true&useServerPrepStmts=true&rewriteBatchedStatements=true
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=10000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.datasource.hikari.maximum-pool-size=90
 spring.datasource.hikari.minimum-idle=30
+
 # 20 seconds
 spring.datasource.hikari.connection-timeout=20000
 # 10 minutes
@@ -28,7 +30,7 @@ spring.datasource.hikari.auto-commit=false
 
 # redis config
 spring.data.redis.host=localhost
-spring.data.redis.port=6479
+spring.data.redis.port=6379
 
 # Actuator & Metrics
 management.endpoints.web.exposure.include=health,info,prometheus,metrics
